--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script language="javascript" type="text/javascript" src="script.js"></script>
+
+
 </head>
 <body>
-	<h1>Fuzzbuzz</h1>
+	<h1>Fizzbuzz II</h1>
+	<p class="fizzbuzz"></p>
+	<div><script>document.write(Fizzbuzz());
 </body>
 </html>
